--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "ftc-pptr",
+  "name": "Image and Text Tweet bot",
   "version": "1.0.0",
-  "description": "Merged scripts from the midjourney scraper and the puppeteer tweeter",
+  "description": " A script that downloads image image from Midjourney's server and then uses puppeteer to tweet a text and the image with ALT texts also.",
   "main": "action.js",
   "scripts": {
-    "start": "node action.js",
+    "start": "node ./src/action.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
